--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: julia
 os:
-- linux
-- osx
+  - linux
+  - osx
 julia:
-- 0.6
+  - 0.7
+  - nightly
 notifications:
   email: false
 env:
