--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
 
 [compat]
-AWSCore = "0.5, 0.6"
+AWSCore = "0.5, 0.6, 0.7"
 FilePathsBase = "0.6"
 julia = "1"
 
