--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AWSS3"
 uuid = "1c724243-ef5b-51ab-93f4-b0a88ac62a95"
 authors = ["Sam O'Connor"]
-version = "0.6.3"
+version = "0.6.4"
 
 [deps]
 AWSCore = "4f1ea46c-232b-54a6-9b17-cc2d0f3e6598"
@@ -11,6 +11,7 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MbedTLS = "739be429-bea8-5141-9913-cc70e7f3736d"
 Retry = "20febd7b-183b-5ae2-ac4a-720e7ce64774"
 SymDict = "2da68c74-98d7-5633-99d6-8493888d7b1e"
@@ -23,7 +24,7 @@ DataStructures = "0.15, 0.16, 0.17"
 EzXML = "0.9"
 FilePathsBase = "0.6, 0.7"
 HTTP = "0.8"
-MbedTLS = "0.6"
+MbedTLS = "0.6, 0.7"
 Retry = "0.3, 0.4"
 SymDict = "0.3"
 XMLDict = "0.3"
