--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "AWSS3"
 uuid = "1c724243-ef5b-51ab-93f4-b0a88ac62a95"
 authors = ["Sam O'Connor"]
-version = "0.6.5"
+version = "0.6.6"
 
 [deps]
 AWSCore = "4f1ea46c-232b-54a6-9b17-cc2d0f3e6598"
@@ -27,7 +27,7 @@ HTTP = "0.8"
 MbedTLS = "0.6, 0.7"
 Retry = "0.3, 0.4"
 SymDict = "0.3"
-XMLDict = "0.3"
+XMLDict = "0.3, 0.4"
 julia = "1"
 
 [extras]
