--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ EzXML = "0.9, 1"
 FilePathsBase = "0.9"
 HTTP = "0.8"
 MbedTLS = "0.6, 0.7, 1"
-OrderedCollections = "1.0, 1.1, 1.2"
+OrderedCollections = "1"
 Retry = "0.3, 0.4"
 SymDict = "0.3"
 XMLDict = "0.3, 0.4"
