--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -60,10 +60,11 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         uses: julia-actions/julia-runtest@latest
-      - uses: ravsamhq/notify-slack-action@v1.0
+      - uses: ravsamhq/notify-slack-action@master
         if: always()
         with:
           status: ${{ job.status }}
-          notify_when: 'failure'
+          notify_when: [failure] # default: [success, failure, warnings]
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # optional
