--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,7 +64,7 @@ jobs:
         if: always()
         with:
           status: ${{ job.status }}
-          notify_when: [failure] # default: [success, failure, warnings]
+          notify_when: 'failure' # default: 'success,failure,warnings'
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # optional
