--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -54,7 +54,9 @@ jobs:
         if: ${{ (matrix.version == '1.3') || (matrix.version == '1.0') }}
         run: |
           # Remove Minio from the test project
-          sed -i -e '/^Minio =/d; s/"Minio"\(, \)\{0,1\}//' Project.toml
+          write("Project.toml", read(`grep -v '^Minio =' Project.toml`, String))
+          run(`sed -i -e 's/, "Minio"//' Project.toml`)
+        shell: julia --project=. --startup=no --color=yes {0}
       - env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
