--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,21 +18,17 @@ jobs:
       fail-fast: false
       matrix:
         version:
+          - "1.3"  # Earliest supported version / Invenia version used
           - "1"    # Latest release
         os:
           - ubuntu-latest
           - macOS-latest
         arch:
           - x64
-        include:
-          # Add a 1.0 job just to make sure we still support it
-          - os: ubuntu-latest
-            version: "1.0"
-            arch: x64
-          # Add a 1.3 job because that's what Invenia actually uses
-          - os: ubuntu-latest
-            version: "1.3"
-            arch: x64
+        exclude:
+          # Skip testing earliest version on macOS to make CI faster
+          - version: "1.3"
+            os: macOS-latest
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
@@ -50,8 +46,8 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@latest
-      - name: "Compat fix for Julia < v1.5"
-        if: ${{ (matrix.version == '1.3') || (matrix.version == '1.0') }}
+      - name: "Test compat fix for Julia < v1.5"
+        if: ${{ (matrix.version == '1.3') || (matrix.version == '1.4') }}
         run: |
           # Remove Minio from the test project
           sed -i -e '/^Minio =/d; s/, "Minio"//; s/"Minio"\(, \)\{0,1\}//' Project.toml
