--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
 AWS = "1.63.1"
 Compat = "3.29.0"
 EzXML = "0.9, 1"
-FilePathsBase = "0.9.11, 0.9.12, 0.9.13, 0.9.14, 0.9.15"
+FilePathsBase = "=0.9.11, =0.9.12, =0.9.13, =0.9.14, =0.9.15"
 HTTP = "0.8, 0.9"
 JSON3 = "1"
 MbedTLS = "0.6, 0.7, 1"
