Debug macOS segfault on CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,14 +21,14 @@ jobs:
           - "1.3"  # Earliest supported version / Invenia version used
           - "1"    # Latest release
         os:
-          - ubuntu-latest
+          # - ubuntu-latest
           - macOS-latest
         arch:
           - x64
-        exclude:
-          # Skip testing earliest version on macOS to make CI faster
-          - version: "1.3"
-            os: macOS-latest
+        # exclude:
+        #   # Skip testing earliest version on macOS to make CI faster
+        #   - version: "1.3"
+        #     os: macOS-latest
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
