--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,9 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - "1.3"  # Earliest supported version / Invenia version used
+          # - "1.3"  # Earliest supported version / Invenia version used
+          - "1.5"
+          - "1.6"
           - "1"    # Latest release
         os:
           - ubuntu-latest
