--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,6 @@ Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
-HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 MbedTLS = "739be429-bea8-5141-9913-cc70e7f3736d"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Retry = "20febd7b-183b-5ae2-ac4a-720e7ce64774"
@@ -24,8 +23,7 @@ AWS = "1.63.1"
 ArrowTypes = "1.2"
 Compat = "3.29.0"
 EzXML = "0.9, 1"
-FilePathsBase = "=0.9.11, =0.9.12, =0.9.13, =0.9.14, =0.9.15"
-HTTP = "0.8, 0.9"
+FilePathsBase = "=0.9.11, =0.9.12, =0.9.13, =0.9.14, =0.9.15, =0.9.16, =0.9.17, =0.9.18"
 JSON3 = "1"
 MbedTLS = "0.6, 0.7, 1"
 Minio = "0.1"
@@ -34,7 +32,7 @@ Retry = "0.3, 0.4"
 SymDict = "0.3"
 URIs = "1.3"
 XMLDict = "0.3, 0.4"
-julia = "1.3"
+julia = "1.6"
 
 [extras]
 Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
