--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ AWS = "1.63.1"
 ArrowTypes = "1.2"
 Compat = "3.29.0"
 EzXML = "0.9, 1"
-FilePathsBase = "=0.9.11, =0.9.12, =0.9.13, =0.9.14, =0.9.15"
+FilePathsBase = "=0.9.11, =0.9.12, =0.9.13, =0.9.14, =0.9.15, 0.9"
 JSON3 = "1"
 MbedTLS = "0.6, 0.7, 1"
 Minio = "0.1"
