--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ XMLDict = "228000da-037f-5747-90a9-8195ccbf91a5"
 [compat]
 AWS = "1.63.1"
 ArrowTypes = "1.2"
-Compat = "3.29.0"
+Compat = "3.29.0, 4"
 EzXML = "0.9, 1"
 FilePathsBase = "=0.9.11, =0.9.12, =0.9.13, =0.9.14, =0.9.15"
 JSON3 = "1"
