--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ EzXML = "0.9, 1"
 FilePathsBase = "=0.9.11, =0.9.12, =0.9.13, =0.9.14, =0.9.15"
 JSON3 = "1"
 MbedTLS = "0.6, 0.7, 1"
-Minio = "0.1"
+Minio = "0.1, 0.2"
 Mocking = "0.7"
 OrderedCollections = "1"
 Retry = "0.3, 0.4"
