Make delimiter required by policy

--- a/test/resources/awss3_jl_test.yaml
+++ b/test/resources/awss3_jl_test.yaml
@@ -272,6 +272,7 @@ Resources:
             Condition:
               StringLike:
                 s3:prefix: ["prefix/granted/*"]
+                s3:delimiter: ["/"]
 
   SignUrlTestsetRole:
     Type: AWS::IAM::Role
