--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 MbedTLS = "739be429-bea8-5141-9913-cc70e7f3736d"
 Mocking = "78c3b35d-d492-501b-9361-3d52fe80e533"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
@@ -25,6 +26,7 @@ ArrowTypes = "1.2, 2"
 Compat = "3.29, 4"
 EzXML = "0.9, 1"
 FilePathsBase = "0.9.11"
+HTTP = "1"
 JSON3 = "1"
 MbedTLS = "0.6, 0.7, 1"
 Minio = "0.1, 0.2"
