--- a/.github/workflows/blue_style_formatter.yml
+++ b/.github/workflows/blue_style_formatter.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
-          version: 1
+          version: "1"
       - uses: julia-actions/cache@v2
       - name: Install JuliaFormatter
         shell: julia --project=@format --color=yes {0}
