--- a/.github/workflows/TagBot.yaml
+++ b/.github/workflows/TagBot.yaml
@@ -1,3 +1,4 @@
+---
 name: TagBot
 on:
   issue_comment:
@@ -6,7 +7,7 @@ on:
   workflow_dispatch:
 jobs:
   TagBot:
-    if: github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot'
+    if: ${{ github.event_name == 'workflow_dispatch' || github.actor == 'JuliaTagBot' }}
     runs-on: ubuntu-latest
     steps:
       - uses: JuliaRegistries/TagBot@v1
